--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'American poetry'
+- GITenberg
 title: The Star-Treader and other poems
 url: http://www.gutenberg.org/ebooks/38410
